--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,21 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/clojure:lein-2.9.3
+      - image: jrei/systemd-ubuntu:20.04
     environment:
       LEIN_ROOT: nbd
       JVM_OPTS: -Xmx3200m
     steps:
+      - run: apt-get install -y software-properties-common
+      - run: wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | sudo apt-key add -
+      - run: sudo add-apt-repository --yes https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y adoptopenjdk-14-hotspot
+      - run: sudo apt-get install -y curl
+      - run: curl https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > lein
+      - run: sudo mv lein /usr/local/bin/lein
+      - run: sudo chmod a+x /usr/local/bin/lein
+      - run: lein version
       - checkout
       - restore_cache:
           key: cci-demo-clojure-{{ checksum "project.clj" }}
