--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: clojure
 lein: 2.9.3
 script:
-  - apt update
-  - apt install systemd
+  - sudo apt update
+  - sudo apt install systemd
   - lein uberjar
