--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,4 @@ lein: 2.9.3
 script:
   - sudo apt update
   - sudo apt install systemd
-  - systemctl --user
-  - lein uberjar
+  - lein do test uberjar
