--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: clojure
 lein: 2.9.3
 script:
   - sudo apt update
-  - sudo apt install systemd
-  - systemctl --user
+  - sudo apt install systemd dbus
+  - systemctl --user start dbus
   - lein do test, uberjar
