--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ lein: 2.9.3
 script:
   - sudo apt update
   - sudo apt install systemd dbus
-  - systemctl --user start dbus
+  - systemctl start dbus
   - lein do test, uberjar
