--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ lein: 2.9.3
 script:
   - sudo apt update
   - sudo apt install systemd dbus
+  - sudo systemctl status dbus.service
   - sudo systemctl start dbus
   - lein do test, uberjar
