--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: clojure
 lein: 2.9.3
 script:
   - export $(dbus-launch)
-  - systemctl --user reload
+  - systemctl --user daemon-reload
   - lein do test, uberjar
