--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ dist: bionic
 lein: 2.9.3
 script:
   - sudo apt update
-  - sudo apt install dbus-user-session
+  - sudo apt install dbus-user-session curl
   - systemctl --user start dbus
   - export DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/$(id -u)/bus
   - lein cloverage --coveralls
+  - curl -F "json_file=@target/coverage/coveralls.json" "https://coveralls.io/api/v1/jobs"
   - lein uberjar
