--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ script:
   - sudo apt install dbus-user-session curl ffmpeg
   - systemctl --user start dbus
   - export DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/$(id -u)/bus
-  - lein cloverage --coveralls
+  - lein coverage --coveralls
   - curl -F "json_file=@target/coverage/coveralls.json" "https://coveralls.io/api/v1/jobs"
   - lein uberjar
